# daily-report

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  run.py  run.sh  schedule.sh  skills-lock.json
src/: cache.py  cleaner.py  config.py  fetcher.py  models.py  processor.py  renderer.py
src/sources/: __init__.py  baai_hub.py  base.py  github_trending.py  leiphone.py  qbitai.py  rss_feed.py  semi_insights.py  volcengine.py
templates/: macros.html  report.html
