[project]
name = "daily-report"
version = "1.0.0"
description = "AI/科技每日新闻日报"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
]

[project.scripts]
daily-report = "run:main"
